--- a/src/index.css
+++ b/src/index.css
@@ -83,10 +83,13 @@ a {
     text-decoration: inherit;
 }
 
+a:after {
+    content: '↗️';
+}
+
 a:hover {
     color: #535bf2;
 }
-
 
 body {
     margin: 0;
@@ -139,6 +142,7 @@ h3 {
 hr {
     border: none;
     border-top: 1px solid #333333;
+    margin-bottom: 20px;
 }
 
 li {
@@ -164,7 +168,7 @@ p {
 }
 
 p.timeline {
-    opacity: 0.5;
+    opacity: 0.6;
     line-height: 1;
 }
 
