--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 @font-face {
     font-family: Plex;
     font-weight: 100;
@@ -63,9 +65,6 @@
 }
 
 *, *:before, *:after {
-    margin: 0;
-    padding: 0;
-
     -webkit-box-sizing: border-box !important;
     -moz-box-sizing: border-box !important;
     -ms-box-sizing: border-box !important;
@@ -230,10 +229,6 @@ ul {
 /* class based */
 .bgcolor.dark {
     background-color: #1a1a1a;
-}
-
-.border {
-    border: 1px solid red;
 }
 
 .circle-icon {
